<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--  main.xml 主页面中的字符串  -->
    <string name="clothing">服装</string>
    <string name="dining">餐饮</string>
    <string name="electronics_parts">电配</string>
    <string name="search">搜索</string>
    <string name="high_praise">好评度</string>
    <string name="open_time">开店时间</string>
    <string name="shopping_records">购物记录</string>
    <string name="my_shop">我的店铺</string>
    <string name="store_orders">店铺订单</string>
    <string name="log_out">注销登录</string>
    <string name="sign_in">登录</string>
    <string name="about">关于</string>
    <string name="stores">店铺</string>
    <string name="user_center">用户中心</string>

    <!-- store.xml 商铺页面中的字符串 -->
    <string name="announcement">公告</string>
    <string name="store_info">店铺信息</string>
    <string name="store_state">店铺状态</string>
    <string name="shopkeeper_id">店主ID</string>
    <string name="shop_address">店铺地址</string>
    <string name="call">拨打</string>
    <string name="commodity">商品</string>
    <string name="on_one_page">上一页</string>
    <string name="the_next_page">下一页</string>

    <!-- product.xml 商品界面中的字符串 -->
    <string name="commodity_information">商品信息</string>
    <string name="name">名称</string>
    <string name="price">价格 %1$d元</string>
    <string name="details">详细介绍</string>
    <string name="schedule">预定</string>
    <string name="number">数量</string>
    <string name="additional_information">附加信息</string>
    <string name="use_the_following_telephone">使用下面的电话</string>
    <string name="use_the_following_address">使用下面的地址</string>
    <string name="add_to_shopping_cart">添加到购物车</string>
    <string name="place_an_order_directly">直接下单</string>

    <!-- land.xml 登录页面中的字符串 -->
    <string name="land">登陆</string>
    <string name="ordinary_account">普通账号</string>
    <string name="account_number">账号</string>

    <!--  register.xml 注册页面 -->
    <string name="nickname">昵称</string>
    <string name="confirm_password">确认密码</string>
    <string name="phone_number">手机号码</string>


    <!-- myShop.xml我的店铺界面 -->
    <string name="modify_bulletin">修改公告</string>
    <string name="revised_data">修改资料</string>
    <string name="commodity_management">商品管理</string>

    <!-- shoppingCart.xml 购物车页面 -->
    <string name="delete">删除</string>
    <string name="place_an_order">下单</string>
    <string name="select_all">全选</string>

    <!-- commodityMnagement.xml商品管理页面 -->
    <string name="add_to">添加</string>
    <string name="delete_selected">删除已选</string>

    <!-- 公共字符串 -->
    <string name="app_name">校园易购</string>
    <string name="send_up_prices">起送价格</string>
    <string name="telephone">电话</string>
    <string name="shopping_cart">购物车</string>
    <string name="cipher">密码</string>
    <string name="address">地址</string>
    <string name="registration">注册</string>
</resources>
